Reorganized directory, to have twitter/ and revenue/ dirs for the main 2 problems; knitted R files and cleaned up a bit

--- a/twitter/1_twitter_mine.ipynb
+++ b/twitter/1_twitter_mine.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mine Data from Twitter\n",
+    "This brief script uses the Twitter API to download tweets containing any of a set of keywords realtime.  It is intended to be run from the command line, with the data stream redirected to a .json file.\n",
+    "\n",
+    "**NOTE:** Running this code first requires that the user obtain the necessary API and token keys, and fill in the areas tagged &lt;insert yours here&gt; in the code below.  These may be obtained at https://apps.twitter.com/.  For additional info see also: https://twittercommunity.com/t/how-to-get-my-api-key/7033"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -56,12 +66,12 @@
     "\n",
     "> python twitter_mine.py > nuggests.json  \n",
     "\n",
-    "OR, >> to append                  \n",
+    "OR >> to append to an existing document.\n",
     "\n",
     "Can track progress with, e.g.,\n",
     "> wc nuggets.json \n",
     "\n",
-    "while python script is running (first field is line Count, includes tweet and line between, so first field = 2n)                  \n",
+    "while python script is running (first field is the line count and includes a line for the tweet and line between tweets, so the number of tweets = line count / 2)                  \n",
     "Ran until samples >= 5000 "
    ]
   }
