--- a/twitter/2_twitter_compile.ipynb
+++ b/twitter/2_twitter_compile.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -94,82 +94,152 @@
       "text/plain": [
        "{u'contributors': None,\n",
        " u'coordinates': None,\n",
-       " u'created_at': u'Wed Sep 28 18:18:31 +0000 2016',\n",
-       " u'entities': {u'hashtags': [],\n",
+       " u'created_at': u'Wed Sep 28 18:18:17 +0000 2016',\n",
+       " u'entities': {u'hashtags': [{u'indices': [43, 54], u'text': u'DirectChat'},\n",
+       "   {u'indices': [85, 95], u'text': u'AdultWork'}],\n",
        "  u'symbols': [],\n",
-       "  u'urls': [{u'display_url': u'bit.ly/2dDAEap',\n",
-       "    u'expanded_url': u'http://bit.ly/2dDAEap',\n",
-       "    u'indices': [59, 82],\n",
-       "    u'url': u'https://t.co/FWJJjww3oT'}],\n",
-       "  u'user_mentions': []},\n",
+       "  u'urls': [],\n",
+       "  u'user_mentions': [{u'id': 2574814004,\n",
+       "    u'id_str': u'2574814004',\n",
+       "    u'indices': [3, 18],\n",
+       "    u'name': u'PrincessJessika',\n",
+       "    u'screen_name': u'JessikaDommeUK'}]},\n",
        " u'favorite_count': 0,\n",
        " u'favorited': False,\n",
        " u'filter_level': u'low',\n",
        " u'geo': None,\n",
-       " u'id': 781196404836278273,\n",
-       " u'id_str': u'781196404836278273',\n",
+       " u'id': 781196347613536256,\n",
+       " u'id_str': u'781196347613536256',\n",
        " u'in_reply_to_screen_name': None,\n",
        " u'in_reply_to_status_id': None,\n",
        " u'in_reply_to_status_id_str': None,\n",
        " u'in_reply_to_user_id': None,\n",
        " u'in_reply_to_user_id_str': None,\n",
        " u'is_quote_status': False,\n",
-       " u'lang': u'und',\n",
+       " u'lang': u'en',\n",
        " u'place': None,\n",
-       " u'possibly_sensitive': False,\n",
        " u'retweet_count': 0,\n",
        " u'retweeted': False,\n",
-       " u'source': u'<a href=\"http://twitterfeed.com\" rel=\"nofollow\">twitterfeed</a>',\n",
-       " u'text': u'Microsoft y Lenovo impiden instalar Linux en... - PoderPDA https://t.co/FWJJjww3oT',\n",
-       " u'timestamp_ms': u'1475086711497',\n",
+       " u'retweeted_status': {u'contributors': None,\n",
+       "  u'coordinates': None,\n",
+       "  u'created_at': u'Wed Sep 28 17:32:21 +0000 2016',\n",
+       "  u'entities': {u'hashtags': [{u'indices': [23, 34], u'text': u'DirectChat'},\n",
+       "    {u'indices': [65, 75], u'text': u'AdultWork'}],\n",
+       "   u'symbols': [],\n",
+       "   u'urls': [{u'display_url': u'aws.im/hSS',\n",
+       "     u'expanded_url': u'http://aws.im/hSS',\n",
+       "     u'indices': [103, 126],\n",
+       "     u'url': u'https://t.co/ujfstZJwSd'}],\n",
+       "   u'user_mentions': []},\n",
+       "  u'favorite_count': 0,\n",
+       "  u'favorited': False,\n",
+       "  u'filter_level': u'low',\n",
+       "  u'geo': None,\n",
+       "  u'id': 781184785016324096,\n",
+       "  u'id_str': u'781184785016324096',\n",
+       "  u'in_reply_to_screen_name': None,\n",
+       "  u'in_reply_to_status_id': None,\n",
+       "  u'in_reply_to_status_id_str': None,\n",
+       "  u'in_reply_to_user_id': None,\n",
+       "  u'in_reply_to_user_id_str': None,\n",
+       "  u'is_quote_status': False,\n",
+       "  u'lang': u'en',\n",
+       "  u'place': None,\n",
+       "  u'possibly_sensitive': False,\n",
+       "  u'retweet_count': 2,\n",
+       "  u'retweeted': False,\n",
+       "  u'source': u'<a href=\"http://www.adultwork.com\" rel=\"nofollow\">AdultWork.com</a>',\n",
+       "  u'text': u'I am now available for #DirectChat &amp; Phone Chat Bookings via #AdultWork.com.  Come give me a call! https://t.co/ujfstZJwSd',\n",
+       "  u'truncated': False,\n",
+       "  u'user': {u'contributors_enabled': False,\n",
+       "   u'created_at': u'Wed Jun 18 13:04:34 +0000 2014',\n",
+       "   u'default_profile': False,\n",
+       "   u'default_profile_image': False,\n",
+       "   u'description': u'Femdom Bitch #Dominatrix. Content Producer & #Webcam Princess http://refer.adultwork.com/?R=2546494&T=2546494 \\nhttps://www.amazon.co.uk/gp/registry/wishlist',\n",
+       "   u'favourites_count': 3123,\n",
+       "   u'follow_request_sent': None,\n",
+       "   u'followers_count': 7159,\n",
+       "   u'following': None,\n",
+       "   u'friends_count': 815,\n",
+       "   u'geo_enabled': False,\n",
+       "   u'id': 2574814004,\n",
+       "   u'id_str': u'2574814004',\n",
+       "   u'is_translator': False,\n",
+       "   u'lang': u'en-gb',\n",
+       "   u'listed_count': 40,\n",
+       "   u'location': u'London, England',\n",
+       "   u'name': u'PrincessJessika',\n",
+       "   u'notifications': None,\n",
+       "   u'profile_background_color': u'000000',\n",
+       "   u'profile_background_image_url': u'http://pbs.twimg.com/profile_background_images/491579500354732034/Lmv84mpB.png',\n",
+       "   u'profile_background_image_url_https': u'https://pbs.twimg.com/profile_background_images/491579500354732034/Lmv84mpB.png',\n",
+       "   u'profile_background_tile': True,\n",
+       "   u'profile_banner_url': u'https://pbs.twimg.com/profile_banners/2574814004/1467775748',\n",
+       "   u'profile_image_url': u'http://pbs.twimg.com/profile_images/771884537290821632/TzuZPgYT_normal.jpg',\n",
+       "   u'profile_image_url_https': u'https://pbs.twimg.com/profile_images/771884537290821632/TzuZPgYT_normal.jpg',\n",
+       "   u'profile_link_color': u'F58EA8',\n",
+       "   u'profile_sidebar_border_color': u'000000',\n",
+       "   u'profile_sidebar_fill_color': u'DDEEF6',\n",
+       "   u'profile_text_color': u'333333',\n",
+       "   u'profile_use_background_image': True,\n",
+       "   u'protected': False,\n",
+       "   u'screen_name': u'JessikaDommeUK',\n",
+       "   u'statuses_count': 4512,\n",
+       "   u'time_zone': u'London',\n",
+       "   u'url': u'http://www.princessjessika.com/',\n",
+       "   u'utc_offset': 3600,\n",
+       "   u'verified': False}},\n",
+       " u'source': u'<a href=\"https://roundteam.co\" rel=\"nofollow\">RoundTeam</a>',\n",
+       " u'text': u'RT @JessikaDommeUK: I am now available for #DirectChat &amp; Phone Chat Bookings via #AdultWork.com.  Come give me a call! https://t.co/ujfstZJ\\u2026',\n",
+       " u'timestamp_ms': u'1475086697854',\n",
        " u'truncated': False,\n",
        " u'user': {u'contributors_enabled': False,\n",
-       "  u'created_at': u'Tue May 12 21:57:47 +0000 2009',\n",
+       "  u'created_at': u'Wed Feb 13 21:59:56 +0000 2013',\n",
        "  u'default_profile': False,\n",
        "  u'default_profile_image': False,\n",
-       "  u'description': u'Webmaster y Fotografo wolgfangchacon@gmail.com',\n",
-       "  u'favourites_count': 236,\n",
+       "  u'description': u'The DP Service offering FREE Dailypay on AW. http://goo.gl/WxccxG  No 20% VAT on AW Join here http://goo.gl/4N7LuK',\n",
+       "  u'favourites_count': 1779,\n",
        "  u'follow_request_sent': None,\n",
-       "  u'followers_count': 2322,\n",
+       "  u'followers_count': 12633,\n",
        "  u'following': None,\n",
-       "  u'friends_count': 2216,\n",
+       "  u'friends_count': 933,\n",
        "  u'geo_enabled': False,\n",
-       "  u'id': 39607348,\n",
-       "  u'id_str': u'39607348',\n",
+       "  u'id': 1176955868,\n",
+       "  u'id_str': u'1176955868',\n",
        "  u'is_translator': False,\n",
-       "  u'lang': u'es',\n",
-       "  u'listed_count': 108,\n",
-       "  u'location': u'Venezuela',\n",
-       "  u'name': u'Wolgfang Chacon',\n",
+       "  u'lang': u'en',\n",
+       "  u'listed_count': 403,\n",
+       "  u'location': u'UK',\n",
+       "  u'name': u'\\u2b50\\ufe0fAdultworksFinest\\u2b50\\ufe0f',\n",
        "  u'notifications': None,\n",
-       "  u'profile_background_color': u'022330',\n",
-       "  u'profile_background_image_url': u'http://abs.twimg.com/images/themes/theme15/bg.png',\n",
-       "  u'profile_background_image_url_https': u'https://abs.twimg.com/images/themes/theme15/bg.png',\n",
-       "  u'profile_background_tile': False,\n",
-       "  u'profile_banner_url': u'https://pbs.twimg.com/profile_banners/39607348/1397479859',\n",
-       "  u'profile_image_url': u'http://pbs.twimg.com/profile_images/2511084435/txgq3agylblp7aylywhf_normal.jpeg',\n",
-       "  u'profile_image_url_https': u'https://pbs.twimg.com/profile_images/2511084435/txgq3agylblp7aylywhf_normal.jpeg',\n",
-       "  u'profile_link_color': u'0084B4',\n",
-       "  u'profile_sidebar_border_color': u'A8C7F7',\n",
-       "  u'profile_sidebar_fill_color': u'C0DFEC',\n",
+       "  u'profile_background_color': u'131516',\n",
+       "  u'profile_background_image_url': u'http://pbs.twimg.com/profile_background_images/791859540/cce9309e96d21c80ebcf9b7e84e05d69.png',\n",
+       "  u'profile_background_image_url_https': u'https://pbs.twimg.com/profile_background_images/791859540/cce9309e96d21c80ebcf9b7e84e05d69.png',\n",
+       "  u'profile_background_tile': True,\n",
+       "  u'profile_banner_url': u'https://pbs.twimg.com/profile_banners/1176955868/1434061130',\n",
+       "  u'profile_image_url': u'http://pbs.twimg.com/profile_images/773823291811303426/jaHOMdqz_normal.jpg',\n",
+       "  u'profile_image_url_https': u'https://pbs.twimg.com/profile_images/773823291811303426/jaHOMdqz_normal.jpg',\n",
+       "  u'profile_link_color': u'8F0B47',\n",
+       "  u'profile_sidebar_border_color': u'000000',\n",
+       "  u'profile_sidebar_fill_color': u'DDEEF6',\n",
        "  u'profile_text_color': u'333333',\n",
        "  u'profile_use_background_image': True,\n",
        "  u'protected': False,\n",
-       "  u'screen_name': u'wchacon',\n",
-       "  u'statuses_count': 135743,\n",
-       "  u'time_zone': u'Caracas',\n",
-       "  u'url': None,\n",
-       "  u'utc_offset': -14400,\n",
+       "  u'screen_name': u'AWs_Finest',\n",
+       "  u'statuses_count': 148407,\n",
+       "  u'time_zone': u'Casablanca',\n",
+       "  u'url': u'http://groups.adultwork.com/4246',\n",
+       "  u'utc_offset': 3600,\n",
        "  u'verified': False}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tweet_data[11]"
+    "tweet_data[0]"
    ]
   },
   {
@@ -189,13 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def add_column(keys, col_name):\n",
+    "    '''\n",
+    "    Most of the data that are of interest are at depth one or two in each ta\n",
+    "    json object.  Obtain the data and append to the df as a new column.\n",
+    "    \n",
+    "    @param keys: array of keys that identify the value location of the \n",
+    "       data.\n",
+    "    @param col_name: name of the column to be created\n",
+    "    \n",
+    "    @return: void (modifies df in-place)\n",
+    "    '''\n",
     "    data = []\n",
     "    \n",
     "    for tweet in tweet_data:\n",
@@ -217,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -356,12 +436,13 @@
        "4   False          0           20          2    Communication News   None  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Examine output\n",
     "df.head()"
    ]
   },
@@ -374,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -383,9 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "5007\n",
-      "0.00299580587178\n",
+      "No. data with coords: 15\n",
+      "Total samples in data set: 5007\n",
+      "Fraction with coords: 0.00299580587178\n",
       "{u'type': u'Point', u'coordinates': [-121.8863286, 37.3382082]} \n",
       "\n",
       "{u'type': u'Point', u'coordinates': [-84.3879824, 33.7489954]} \n",
@@ -421,9 +502,9 @@
    ],
    "source": [
     "coords = [cd for cd in df['coords'] if cd is not None]\n",
-    "print len(coords)\n",
-    "print len(df['coords'])\n",
-    "print float(len(coords)) / len(df['coords'])\n",
+    "print 'No. data with coords:', len(coords)\n",
+    "print 'Total samples in data set:', len(df['coords'])\n",
+    "print 'Fraction with coords:', float(len(coords)) / len(df['coords'])\n",
     "for c in coords:\n",
     "    print c, '\\n'\n",
     "    "
@@ -433,12 +514,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (Some) Text Processing"
+    "# Some Basic Text Processing\n",
+    "In this section, determine which of the keywords are found in each tweet\n",
+    "and keep track of this info in additional columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -474,17 +557,17 @@
     }
    ],
    "source": [
-    "# Test                                                                          \n",
-    "ex_text = 'This is a text string.'  \n",
-    "print 'text:', text\n",
-    "print '\"this\" in text:', word_in_text('this', text)                            \n",
-    "print '\"TEXT\" in text:', word_in_text('TEXT', text)                            \n",
-    "print '\"word\" in text:', word_in_text('word', text)                            "
+    "# Test\n",
+    "ex_text = 'This is a text string.'\n",
+    "print 'text:', ex_text\n",
+    "print '\"this\" in text:', word_in_text('this', ex_text)\n",
+    "print '\"TEXT\" in text:', word_in_text('TEXT', ex_text)\n",
+    "print '\"word\" in text:', word_in_text('word', ex_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -496,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -688,7 +771,7 @@
        "4  False  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -722,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -736,7 +819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyses are conducted in a separate notebook."
+    "Analyses are conducted in the following notebook: 3_twitter_analysis.ipynb"
    ]
   }
  ],
