Added note about testing new data

--- a/revenue/7_ML_nuggets2.ipynb
+++ b/revenue/7_ML_nuggets2.ipynb
@@ -1360,7 +1360,13 @@
    "metadata": {},
    "source": [
     "# Testing\n",
-    "To test new datasets, the scaling, transformation, and rescaling steps provided above shoule first be applied, then use \n",
+    "To test new datasets:\n",
+    "* Replace missing data with NA values\n",
+    "* Create the additional columns with the necessary mathematical transformations as described in `nuggetsPreprocess.R`\n",
+    "* scale, transformation, and rescale as done above\n",
+    "\n",
+    "Then use \n",
+    "\n",
     "> `ridge_clf_Final.predict(X)`\n",
     "\n",
     "to predict (where X is the model matrix of predictors after the scale/transform/rescale steps), or use \n",
