note about sequential ordering of data needed to capture temporal autocorrelation

--- a/revenue/7_ML_nuggets2.ipynb
+++ b/revenue/7_ML_nuggets2.ipynb
@@ -1600,32 +1600,39 @@
    },
    "outputs": [],
    "source": [
-    "rev = df['revenue']\n",
-    "rev1weekAgo = [np.nan]\n",
-    "rev2weekAgo = [np.nan] * 2\n",
-    "rev3weekAgo = [np.nan] * 3\n",
-    "rev4weekAgo = [np.nan] * 4\n",
+    "# For previous weeks' revenue to be a useful predictor, the data DO have to be sequential.  Verify:\n",
+    "all_weeks_sequential = True # Change to False if need be\n",
     "\n",
-    "for r in rev[0:(nrows - 1)]:\n",
-    "    rev1weekAgo.append(r)\n",
-    "for r in rev[0:(nrows - 2)]:\n",
-    "    rev2weekAgo.append(r)\n",
-    "for r in rev[0:(nrows - 3)]:\n",
-    "    rev3weekAgo.append(r)\n",
-    "for r in rev[0:(nrows - 4)]:\n",
-    "    rev4weekAgo.append(r)\n",
+    "if all_weeks_sequential:\n",
+    "    rev = df['revenue']\n",
+    "    rev1weekAgo = [np.nan]\n",
+    "    rev2weekAgo = [np.nan] * 2\n",
+    "    rev3weekAgo = [np.nan] * 3\n",
+    "    rev4weekAgo = [np.nan] * 4\n",
     "\n",
-    "test_df['rev1weekAgo'] = rev1weekAgo\n",
-    "test_df['rev2weekAgo'] = rev2weekAgo\n",
-    "test_df['rev3weekAgo'] = rev3weekAgo\n",
-    "test_df['rev4weekAgo'] = rev4weekAgo"
+    "    for r in rev[0:(nrows - 1)]:\n",
+    "        rev1weekAgo.append(r)\n",
+    "    for r in rev[0:(nrows - 2)]:\n",
+    "        rev2weekAgo.append(r)\n",
+    "    for r in rev[0:(nrows - 3)]:\n",
+    "        rev3weekAgo.append(r)\n",
+    "    for r in rev[0:(nrows - 4)]:\n",
+    "        rev4weekAgo.append(r)\n",
+    "\n",
+    "    test_df['rev1weekAgo'] = rev1weekAgo\n",
+    "    test_df['rev2weekAgo'] = rev2weekAgo\n",
+    "    test_df['rev3weekAgo'] = rev3weekAgo\n",
+    "    test_df['rev4weekAgo'] = rev4weekAgo\n",
+    "else:\n",
+    "    print 'Without sequential weeks, some kind of time series forecasting has to be done to account for the ' +\\\n",
+    "    'temporal auto-correlation. Let me know and I will be happy to tackle this problem another way.'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We cannot assume that new data will necessarily be temporally ordered, or in sequential order, but we can still use the `Week` data to determine the weekOfYear."
+    "If we cannot assume that new data will necessarily be temporally ordered, or in sequential order, we can still use the `Week` data to determine the weekOfYear."
    ]
   },
   {
@@ -3555,7 +3562,6 @@
    "outputs": [],
    "source": [
     "# Do NOT fill NAs unless the data are in fact sequential weeks.  Verify:\n",
-    "all_weeks_sequential = True # Change to False if need be\n",
     "if all_weeks_sequential:\n",
     "    test_df.fillna(method = 'ffill', axis = 0, inplace = True)\n",
     "    test_df.fillna(method = 'bfill', axis = 0, inplace = True)"
